--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline list-icons">
             <li class="list-inline-item">
-              <i class="devicon-d3js-plain"></i>
+              <i class="devicons devicons-d3js"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-html5"></i>
