--- a/index.html
+++ b/index.html
@@ -68,12 +68,14 @@
           <h1 class="mb-0">Adria
             <span class="text-primary">Moya</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+          <!-- <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · -->
+          <div class="subheading mb-5">Barcelona, 08022 (Spain) · +34 628 056 808 ·
+            <a href="mailto:name@email.com">adriamoyaortiz@gmail.com</a>
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <!-- <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
+          <p class="mb-5">Hybrid engineer working as Financial Consultant and Data Scientist with +2 years of experience. Achievements include creating credit risk models to predict default companies and multiple end-to-end projects. Focused in ETL, predictive modelling and creative data visualisations. Passionate about programming, travelling and surfing.</p>
           <ul class="list-inline list-social-icons mb-0">
-            <li class="list-inline-item">
+            <!-- <li class="list-inline-item">
               <a href="#">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -88,7 +90,7 @@
                   <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
-            </li>
+            </li> -->
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/adriamoya">
                 <span class="fa-stack fa-lg">
@@ -98,7 +100,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://github.com/adriamoya">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
