--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <a href="mailto:name@email.com">adriamoyaortiz@gmail.com</a>
           </div>
           <!-- <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
-          <p class="mb-5">Hybrid engineer working as Financial Consultant and Data Scientist with +2 years of experience. Achievements include creating credit risk models to predict default companies and multiple end-to-end projects. Focused in ETL, predictive modelling and creative data visualisations. Passionate about programming, travelling and surfing.</p>
+          <p class="mb-5">Hybrid engineer working as Financial Consultant and Data Analyst with +2 years of experience. Achievements include creating credit risk models to predict default companies and multiple end-to-end projects. Focused in ETL, predictive modelling and creative data visualisations. Passionate about programming, travelling and surfing.</p>
           <ul class="list-inline list-social-icons mb-0">
             <!-- <li class="list-inline-item">
               <a href="#">
