--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
                 <p>Strategy and Risk Management consulting projects for top-tier European financial institutions.</p>
                 <ul>
                   <li>Top 5 Spanish Bank:</li>
-                  <ul>
+                  <ul><small>
                     <li>Built a set of predictive models to rank companies based on their estimated probabilities of default and identify non-performing clients.</li>
                     <li>Designed interactive dashboards to monitor risk management.</li>
                     <li>Drafted an optimization plan to efficiently reallocate internal FTEs.</li>
                     <li>Performed high impact financial analyses.</li>
-                  </ul>
-                  <li>Lead a statistical project to accurately classify news articles and automatically generate a daily newsletter with a refined selection of business news.</li>
-                  <li>Taught internal training courses for incoming employees.</li>
+                  </small></ul>
+                  <li style="padding-top:10px;">Lead a statistical project to accurately classify news articles and automatically generate a daily newsletter with a refined selection of business news.</li>
+                  <li style="padding-top:10px;">Taught internal training courses for incoming employees.</li>
                 </ul>
             </div>
             <div class="resume-date text-md-right">
@@ -163,8 +163,19 @@
               <div>Maritime Engineering - Numerical Methods Track</div>
               <p>Grade: 8.43 / 10</p>
               <ul>
-                <li>University of California, Irvine (US): Jul 2014 - Aug 2015</li>
-                <li>Delft University of Technology (NL): Aug 2013 - Jun 2014</li>
+                <li>
+                  University of California, Irvine (US): Jul 2014 - Aug 2015
+                  <ul><small>
+                    <li>Dynamics of Cross-shore Thermally Driven Exchange</li>
+                  </small></ul>
+                </li>
+                <li style="padding-top:10px;">
+                  Delft University of Technology (NL): Aug 2013 - Jun 2014
+                  <ul><small>
+                    <li>Improving wave forecasting in the Catalan coast (MSc Thesis)</li>
+                    <li>Courses: Decision Making in Networks, Finance Engineering, Ocean Waves, Coastal Dynamics, Ports and Waterways, Water Quality Modelling, ...</li>
+                  </small></ul>
+                </li>
               </ul>
             </div>
             <div class="resume-date text-md-right">
