--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </h1>
           <!-- <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · -->
           <div class="subheading mb-5">Barcelona, 08022 (Spain) · +34 628 056 808 ·
-            <a href="mailto:name@email.com">adriamoyaortiz@gmail.com</a>
+            <a href="mailto:adriamoyaortiz@gmail.com">adriamoyaortiz@gmail.com</a>
           </div>
           <!-- <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
           <p class="mb-5">Hybrid engineer working as Financial Consultant and Data Analyst with +2 years of experience. Achievements include creating credit risk models to predict default companies and multiple end-to-end projects. Focused in ETL, predictive modelling and creative data visualisations. Passionate about programming, travelling and surfing.</p>
@@ -204,6 +204,44 @@
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline list-icons">
             <li class="list-inline-item">
+              <i class="devicons devicons-python"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-git"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-markdown"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-terminal"></i>
+            </li>
+          </ul>
+
+          <div class="subheading mb-3">Databases</div>
+          <ul class="list-inline list-icons">
+            <li class="list-inline-item">
+              <i class="devicons devicons-mongodb"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-sqllite"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-mysql"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-postgresql"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-firebase"></i>
+            </li>
+          </ul>
+
+          <div class="subheading mb-3">Web development</div>
+          <ul class="list-inline list-icons">
+            <li class="list-inline-item">
+              <i class="devicons devicons-bootstrap"></i>
+            </li>
+            <li class="list-inline-item">
               <i class="devicons devicons-html5"></i>
             </li>
             <li class="list-inline-item">
@@ -216,29 +254,20 @@
               <i class="devicons devicons-jquery"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
+              <i class="devicons devicons-angular"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
+              <i class="devicons devicons-react"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
+              <i class="devicons devicons-django"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
+              <i class="devicons devicons-heroku"></i>
             </li>
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
+          <!-- <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
@@ -252,7 +281,7 @@
             <li>
               <i class="fa-li fa fa-check"></i>
               Agile Development &amp; Scrum</li>
-          </ul>
+          </ul> -->
         </div>
       </section>
 
