--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <a href="mailto:adriamoyaortiz@gmail.com">adriamoyaortiz@gmail.com</a>
           </div>
           <!-- <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
-          <p class="mb-5">Hybrid engineer working as Financial Consultant and Data Analyst with +2 years of experience. Achievements include creating credit risk models to predict default companies and multiple end-to-end projects. Focused in ETL, predictive modelling and creative data visualisations. Passionate about programming, travelling and surfing.</p>
+          <p class="mb-5">Quantitative engineer working as a Consultant and Data Scientist with +2 years of experience. Focused on growing as a data scientist. Very independent but great team mate, problem solving lover, research addict and passionate about predictive models and AI. Achievements include creating credit risk models, natural language processing and text classification projects, scraping, some web development and multiple end-to-end projects. Focused in ETL, data mining, machine learning and creative data visualisations. Passionate about programming, travelling and surfing.</p>
           <ul class="list-inline list-social-icons mb-0">
             <!-- <li class="list-inline-item">
               <a href="#">
@@ -117,7 +117,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Consultant</h3>
+              <h3 class="mb-0">Data Scientist / Consultant</h3>
               <div class="subheading mb-3">Bluecap Management Consulting</div>
                 <p>Strategy and Risk Management consulting projects for top-tier European financial institutions.</p>
                 <ul>
@@ -128,8 +128,8 @@
                     <li>Drafted an optimization plan to efficiently reallocate internal FTEs.</li>
                     <li>Performed high impact financial analyses.</li>
                   </small></ul>
-                  <li style="padding-top:10px;">Lead a statistical project to accurately classify news articles and automatically generate a daily newsletter with a refined selection of business news.</li>
-                  <li style="padding-top:10px;">Taught internal training courses for incoming employees.</li>
+                  <li style="padding-top:10px;">Lead an NLP project based on classifying news articles in order to autogenerate a customized newsletter with a refined selection of business news. Hosted a Kaggle competition to engage other colleagues to take part of the project in the modelling phase.</li>
+                  <li style="padding-top:10px;">Taught internal training courses for incoming employees to improve their programming skills.</li>
                 </ul>
             </div>
             <div class="resume-date text-md-right">
@@ -141,7 +141,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Junior Specialist</h3>
               <div class="subheading mb-3">University of California, Irvine</div>
-              <p>Co-worked with researchers at the Coastal Dynamics lab within the International Research Program aimed at developing and calibrating a wave-current model to predict coastal phenomena.</p>
+              <p>Co-worked with researchers at the Coastal Dynamics lab within an international research program aimed at developing and calibrating a wave-current model to predict coastal phenomena.</p>
+              <ul>
+                <li>Tested and integrated various formulation approaches to the model and performed in-depth statistical analyses to determine its optimal settings.</li>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Jan 2015 - Aug 2015</span>
@@ -161,7 +163,7 @@
               <h3 class="mb-0">University of California, Irvine (UCI)<br>Delft University of Technology (TUD)</h3>
               <div class="subheading mb-3">MSc in Civil Engineering</div>
               <div>Maritime Engineering - Numerical Methods Track</div>
-              <p>Grade: 8.43 / 10</p>
+              <!-- <p>Grade: 8.43 / 10</p> -->
               <ul>
                 <li>
                   University of California, Irvine (US): Jul 2014 - Aug 2015
@@ -187,7 +189,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Polytechnic University of Catalonia (UPC)</h3>
               <div class="subheading mb-3">BSc in Civil Engineering</div>
-              <p>Grade: 8.15 / 10</p>
+              <!-- <p>Grade: 8.15 / 10</p> -->
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Sep 2009 - Jul 2013</span>
@@ -288,8 +290,10 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <p>My aspirations are centered in growing as a data scientist with a multidisciplinary knowledge, not only programatically but businesslike. I love solving problems and pushing myself to research and explore new ways of tackling challenges in an ever-changing environment.</p>
+          <p>I have taken a lot of online courses to widen my knowledge (machine learning, deep learning, data visualization, web development, ...).</p>
+          <p>Apart from this, I enjoy most of my time being outdoors. In the winter, I don't think about it twice if there are waves and I can spend the day surfing. During the warmer months, I enjoy traveling and exploring the world.</p>
+          <p>When forced indoors, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in data science and artificial intelligence.</p>
         </div>
       </section>
 
