--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
           <li class="nav-item">
@@ -73,7 +76,7 @@
             <a href="mailto:adriamoyaortiz@gmail.com">adriamoyaortiz@gmail.com</a>
           </div>
           <!-- <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
-          <p class="mb-5">Quantitative engineer working as a Consultant and Data Scientist with +2 years of experience. Focused on growing as a data scientist. Very independent but great team mate, problem solving lover, research addict and passionate about predictive models and AI. Achievements include creating credit risk models, natural language processing and text classification projects, scraping, some web development and multiple end-to-end projects. Focused in ETL, data mining, machine learning and creative data visualisations. Passionate about programming, travelling and surfing.</p>
+          <p class="mb-5">Quantitative engineer working as a Consultant and Data Scientist with +2 years of experience. Focused on growing as a data scientist. Very independent but great team mate, problem solving lover, research addict and passionate about predictive models and AI. Achievements include creating credit risk models, natural language processing and text classification projects, scraping, some web development and multiple end-to-end projects. Experienced in ETL, data mining, machine learning and creative data visualisations. Passionate about programming, travelling and surfing.</p>
           <ul class="list-inline list-social-icons mb-0">
             <!-- <li class="list-inline-item">
               <a href="#">
@@ -128,7 +131,7 @@
                     <li>Drafted an optimization plan to efficiently reallocate internal FTEs.</li>
                     <li>Performed high impact financial analyses.</li>
                   </small></ul>
-                  <li style="padding-top:10px;">Lead an NLP project based on classifying news articles in order to autogenerate a customized newsletter with a refined selection of business news. Hosted a Kaggle competition to engage other colleagues to take part of the project in the modelling phase.</li>
+                  <li style="padding-top:10px;">Led an NLP project based on classifying news articles to automatically generate a tailored, daily newsletter with a refined selection of financial and business-like news. Hosted a Kaggle competition to engage other colleagues to take part of the project in the modelling phase.</li>
                   <li style="padding-top:10px;">Taught internal training courses for incoming employees to improve their programming skills.</li>
                 </ul>
             </div>
@@ -269,21 +272,35 @@
             </li>
           </ul>
 
-          <!-- <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
-          </ul> -->
+        </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+        <div class="my-auto">
+          <h2 class="mb-5">Projects</h2>
+
+          <div class="row">
+
+            <div class="card" style="width: 18rem; margin:10px;">
+              <img class="card-img-top" src="img/layout.png" alt="Card image cap" style="height:180px;">
+              <div class="card-body">
+                <h5 class="card-title">News classifier</h5>
+                <p class="card-text">Classifying news articles to build a customized newsletter automatically</p>
+                <a href="https://medium.com/@adriamoyaortiz/classifying-news-articles-to-build-a-customized-newsletter-automatically-ede6ad9ef725" class="btn btn-outline-secondary">View</a>
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem; margin:10px;">
+              <img class="card-img-top" src="img/justeat.jpg" alt="Card image cap" style="height:180px;">
+              <div class="card-body">
+                <h5 class="card-title">JUST EAT optimization</h5>
+                <p class="card-text">Exploring some optimization techniques with real JUST EAT data</p>
+                <a href="https://github.com/adriamoya/justeat_optimization" class="btn btn-outline-secondary">View</a>
+              </div>
+            </div>
+
+          </div>
+
         </div>
       </section>
 
@@ -291,7 +308,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>My aspirations are centered in growing as a data scientist with a multidisciplinary knowledge, not only programatically but businesslike. I love solving problems and pushing myself to research and explore new ways of tackling challenges in an ever-changing environment.</p>
-          <p>I have taken a lot of online courses to widen my knowledge (machine learning, deep learning, data visualization, web development, ...).</p>
+          <p>I have taken lots of online courses to widen my knowledge (machine learning, deep learning, data visualization, web development, ...).</p>
           <p>Apart from this, I enjoy most of my time being outdoors. In the winter, I don't think about it twice if there are waves and I can spend the day surfing. During the warmer months, I enjoy traveling and exploring the world.</p>
           <p>When forced indoors, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in data science and artificial intelligence.</p>
         </div>
@@ -303,31 +320,22 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
+              Balsells Mobility Program - Senior Project at University of California, Irvine</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
+              2015 Ocean Waves Workshop (University of New Orleans) - Presented thesis work (Improving Wave Forecasting in the Catalan coast)</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+              Machine Learning - Coursera Certification</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+              Deep Learning Specialization - Coursera Certification</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
+              TOEFL iBT (111/120)</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+              Certificate in Advanced English (CAE)</li>
           </ul>
         </div>
       </section>
