--- a/index.html
+++ b/index.html
@@ -332,6 +332,9 @@
               Deep Learning Specialization - Coursera Certification</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
+              Accenture Digital Health Hackathon 2018 (Barcelona, Spain)</li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
               TOEFL iBT (111/120)</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
