--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <a href="mailto:adriamoyaortiz@gmail.com">adriamoyaortiz@gmail.com</a>
         </div>
         <!-- <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
-        <p class="mb-5">Quantitative engineer working as a Consultant and Data Scientist with +2 years of experience. Focused on growing as a data scientist. Very independent but great team mate, problem solving lover, research addict and passionate about predictive
+        <p class="mb-5">Quantitative engineer working as a Consultant and Data Scientist with 3+ years of experience. Focused on growing as a data scientist. Very independent but great team mate, problem solving lover, research addict and passionate about predictive
           models and AI. Achievements include creating credit risk models, natural language processing and text classification projects, scraping, some web development and multiple end-to-end projects. Experienced in ETL, data mining, machine learning
           and creative data visualisations. Passionate about programming, travelling and surfing.</p>
         <ul class="list-inline list-social-icons mb-0">
@@ -146,14 +146,23 @@
             <p>Strategy and Risk Management consulting projects for top-tier European financial institutions.</p>
             <ul>
               <li>Top 5 Spanish Bank:</li>
-              <ul><small>
-                    <li>Built a set of predictive models to rank companies based on their estimated probabilities of default and identify non-performing clients.</li>
-                    <li>Designed interactive dashboards to monitor risk management.</li>
-                    <li>Drafted an optimization plan to efficiently reallocate internal FTEs.</li>
-                    <li>Performed high impact financial analyses.</li>
-                  </small></ul>
-              <li style="padding-top:10px;">Led an NLP project based on classifying news articles to automatically generate a tailored, daily newsletter with a refined selection of financial and business-like news. Hosted a Kaggle competition to engage other colleagues to take part
-                of the project in the modelling phase.</li>
+              <ul>
+                <small>
+                  <li>Built a set of predictive models to rank companies based on their estimated probabilities of default and identify non-performing clients.</li>
+                  <li>Designed interactive dashboards to monitor risk management.</li>
+                  <li>Drafted an optimization plan to efficiently reallocate internal FTEs.</li>
+                  <li>Performed high impact financial analyses.</li>
+                </small>
+              </ul>
+              <li style="padding-top:10px;">Led an NLP project based on classifying news articles to automatically generate a tailored, daily newsletter with a refined selection of financial and business-like news.</li>
+              <ul>
+                <small>
+                  <li>Implemented deep learning algorithms for text sentiment and classification.</li>
+                  <li>Hosted a Kaggle competition to engage other colleagues to take part of the project in the modelling phase.</li>
+                  <li>Responsible for overseeing an intern employee.</li>
+                  <li>Deployed the application on AWS (Lambda / EC2 / RDS / CloudWatch ...).</li>
+                </small>
+              </ul>
               <li style="padding-top:10px;">Taught internal training courses for incoming employees to improve their programming skills.</li>
             </ul>
           </div>
@@ -235,6 +244,12 @@
           </li>
           <li class="list-inline-item">
             <i class="devicons devicons-git"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicons devicons-aws"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicons devicons-docker"></i>
           </li>
           <li class="list-inline-item">
             <i class="devicons devicons-markdown"></i>
