--- a/index.html
+++ b/index.html
@@ -90,12 +90,14 @@
         <h1 class="mb-0">Adria
             <span class="text-primary">Moya</span>
           </h1>
-        <!-- <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · -->
-        <div class="subheading mb-5">Barcelona, 08022 (Spain) · +34 628 056 808 ·
+        <!-- <div class="subheading mb-5">Barcelona, 08022 (Spain) · +34 628 056 808 ·
+          <a href="mailto:adriamoyaortiz@gmail.com">adriamoyaortiz@gmail.com</a>
+        </div> -->
+        <div class="subheading mb-5">Dublin, Ireland · +353 (0) 87 986 2161 / +34 628 056 808 ·
           <a href="mailto:adriamoyaortiz@gmail.com">adriamoyaortiz@gmail.com</a>
         </div>
-        <!-- <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
-        <p class="mb-5">Quantitative engineer working as a Consultant and Data Scientist with 3+ years of experience. Focused on growing as a data scientist. Very independent but great team mate, problem solving lover, research addict and passionate about predictive
+        <p><strong>Quantitative engineer working as Data Specialist at Facebook (Ireland) with 3+ years of experience.</strong></p>
+        <p class="mb-5">Focused on growing as a data scientist. Very independent but great team mate, problem solving lover, research addict and passionate about predictive
           models and AI. Achievements include creating credit risk models, natural language processing and text classification projects, scraping, some web development and multiple end-to-end projects. Experienced in ETL, data mining, machine learning
           and creative data visualisations. Passionate about programming, travelling and surfing.</p>
         <ul class="list-inline list-social-icons mb-0">
@@ -141,6 +143,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
+            <h3 class="mb-0">Data Specialist</h3>
+            <div class="subheading mb-3">Facebook</div>
+            <ul>
+              <li>Building and supporting data infrastructure.</li>
+              <li>Execute quantitative analyses of data and trends to proactively deliver insights, define goals, and drive improvements.</li>
+              <li>Partner with multiple cross-functional teams including Product, Engineering, Design, Content, Operations, Privacy, and Data.</li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Oct 2018 - Present</span><br>
+            <span class="text-secondary">Dublin, Ireland</span>
+          </div>
+        </div>
+
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
             <h3 class="mb-0">Data Scientist / Consultant</h3>
             <div class="subheading mb-3">Bluecap Management Consulting</div>
             <p>Strategy and Risk Management consulting projects for top-tier European financial institutions.</p>
@@ -167,7 +186,8 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Sep 2015 - Present</span>
+            <span class="text-primary">Sep 2015 - Oct 2018</span><br>
+            <span class="text-secondary">Barcelona, Spain</span>
           </div>
         </div>
 
@@ -180,7 +200,8 @@
               <li>Tested and integrated various formulation approaches to the model and performed in-depth statistical analyses to determine its optimal settings.</li>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Jan 2015 - Aug 2015</span>
+            <span class="text-primary">Jan 2015 - Aug 2015</span><br>
+            <span class="text-secondary">Irvine, California (US)</span>
           </div>
         </div>
 
