--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Adria Moya</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
         </span>
       </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,13 +93,14 @@
         <!-- <div class="subheading mb-5">Barcelona, 08022 (Spain) · +34 628 056 808 ·
           <a href="mailto:adriamoyaortiz@gmail.com">adriamoyaortiz@gmail.com</a>
         </div> -->
-        <div class="subheading mb-5">Dublin, Ireland · +353 (0) 87 986 2161 / +34 628 056 808 ·
+        <!-- <div class="subheading mb-5">Dublin, Ireland · +353 (0) 87 986 2161 / +34 628 056 808 ·
+        <div class="subheading mb-5">Dublin, Ireland · -->
+        <div class="subheading mb-5">
           <a href="mailto:adriamoyaortiz@gmail.com">adriamoyaortiz@gmail.com</a>
         </div>
         <p><strong>Quantitative engineer working as Data Specialist at Facebook (Ireland) with 3+ years of experience.</strong></p>
         <p class="mb-5">Focused on growing as a data scientist. Very independent but great team mate, problem solving lover, research addict and passionate about predictive
-          models and AI. Achievements include creating credit risk models, natural language processing and text classification projects, scraping, some web development and multiple end-to-end projects. Experienced in ETL, data mining, machine learning
-          and creative data visualisations. Passionate about programming, travelling and surfing.</p>
+          models and AI. Achievements include creating credit risk models, natural language processing and text classification projects, scraping, some web development and multiple end-to-end projects. Experienced in ETL, data science and web and software development. Passionate about programming, travelling and surfing.</p>
         <ul class="list-inline list-social-icons mb-0">
           <!-- <li class="list-inline-item">
               <a href="#">
@@ -339,23 +340,26 @@
 
         <div class="row">
 
-          <div class="card" style="width: 18rem; margin:10px;">
-            <img class="card-img-top" src="img/layout.png" alt="Card image cap" style="height:180px;">
-            <div class="card-body">
-              <h5 class="card-title">News classifier</h5>
-              <p class="card-text">Classifying news articles to build a customized newsletter automatically</p>
-              <a href="https://medium.com/@adriamoyaortiz/classifying-news-articles-to-build-a-customized-newsletter-automatically-ede6ad9ef725" class="btn btn-outline-secondary">View</a>
-            </div>
-          </div>
+          <div class="col-lg-4" style="margin:10px;">
+            <img class="rounded-circle" src="img/project-3.png" width="140" height="140" focusable="false" role="img">
+            <h3>Python + Deep Learning + AWS</h3>
+            <p>Build a financial newsletter with Deep Learning and AWS - Part 1</p>
+            <a href="https://medium.com/@adriamoyaortiz/classifying-news-articles-to-build-a-customized-newsletter-automatically-ede6ad9ef725" class="btn btn-outline-secondary">View</a>
+          </div><!-- /.col-lg-4 -->
 
-          <div class="card" style="width: 18rem; margin:10px;">
-            <img class="card-img-top" src="img/justeat.jpg" alt="Card image cap" style="height:180px;">
-            <div class="card-body">
-              <h5 class="card-title">JUST EAT optimization</h5>
-              <p class="card-text">Exploring some optimization techniques with real JUST EAT data</p>
-              <a href="https://github.com/adriamoya/justeat_optimization" class="btn btn-outline-secondary">View</a>
-            </div>
-          </div>
+          <div class="col-lg-4" style="margin:10px;">
+            <img class="rounded-circle" src="img/project-2.png" width="140" height="140" focusable="false" role="img">
+            <h3>Python + Deep Learning + AWS</h3>
+            <p>Build a financial newsletter with Deep Learning and AWS - Part 2</p>
+            <a href="https://medium.com/@adriamoyaortiz/classifying-news-to-build-a-newsletter-with-deep-learning-part-2-cd6104fa7317" class="btn btn-outline-secondary">View</a>
+          </div><!-- /.col-lg-4 -->
+
+          <div class="col-lg-4" style="margin:10px;">
+            <img class="rounded-circle" src="img/project-1.png" width="140" height="140" focusable="false" role="img">
+            <h3>JUST EAT optimization</h3>
+            <p class="card-text">Exploring some optimization techniques from Google's OR-Tools with real JUST EAT data</p>
+            <a href="https://github.com/adriamoya/justeat_optimization" class="btn btn-outline-secondary">View</a>
+          </div><!-- /.col-lg-4 -->
 
         </div>
 
@@ -365,7 +369,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
       <div class="my-auto">
         <h2 class="mb-5">Interests</h2>
-        <p>My aspirations are centered in growing as a data scientist with a multidisciplinary knowledge, not only programatically but businesslike. I love solving problems and pushing myself to research and explore new ways of tackling challenges in an
+        <p>My aspirations are centered in growing as a data scientist / full stack engineer with a multidisciplinary knowledge, not only programatically but businesslike. I love solving problems and pushing myself to research and explore new ways of tackling challenges in an
           ever-changing environment.</p>
         <p>I have taken lots of online courses to widen my knowledge (machine learning, deep learning, data visualization, web development, ...).</p>
         <p>Apart from this, I enjoy most of my time being outdoors. In the winter, I don't think about it twice if there are waves and I can spend the day surfing. During the warmer months, I enjoy traveling and exploring the world.</p>
